tests/baselines/reference/checkJsxChildrenProperty8.errors.txt
file.tsx(1,1): error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.


==== file.tsx (1 errors) ====
    import React = require('react');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1202: Import assignment cannot be used when targeting ECMAScript modules. Consider using 'import * as ns from "mod"', 'import {a} from "mod"', 'import d from "mod"', or another module format instead.
    
    interface Prop {
        a: number,
        b: string,
        children: string | JSX.Element | (string | JSX.Element)[];
    }
    
    class Button extends React.Component<any, any> {
        render() {
            return (<div>My Button</div>)
        }
    }
    
    function AnotherButton(p: any) {
        return <h1>Just Another Button</h1>;
    }
    
    function Comp(p: Prop) {
        return <div>{p.b}</div>;
    }
    
    // OK
    let k1 = <Comp a={10} b="hi"><Button />  <AnotherButton /></Comp>;
    let k2 = <Comp a={10} b="hi"><Button />
        <AnotherButton />  </Comp>;
    let k3 = <Comp a={10} b="hi">    <Button />
        <AnotherButton /></Comp>;
    let k4 = <Comp a={10} b="hi"><Button />  </Comp>;